--- a/Views/VocaSet/Create.cshtml
+++ b/Views/VocaSet/Create.cshtml
@@ -50,7 +50,7 @@
                         <button type="submit" class="btn-primary flex-1 bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded-lg transition">
                             <i class="fas fa-save mr-2"></i> Lưu bộ từ
                         </button>
-                        <a asp-action="Index" class="btn-secondary flex-1 text-center bg-gray-200 hover:bg-gray-300 text-gray-700 py-2 px-4 rounded-lg transition">
+                        <a asp-controller="Folder" asp-action="Index" class="btn-secondary flex-1 text-center bg-gray-200 hover:bg-gray-300 text-gray-700 py-2 px-4 rounded-lg transition">
                             <i class="fas fa-times mr-2"></i> Hủy
                         </a>
                     </div>
